test/liftedConsuming1_3.slq

def main(){
	x:=H(0);
	y:=dup(x);
	if X(y){
		forget(y);
	}else{
		y:=2:int[3]; /// error
	}
	return x;
}
